--- a/Train at home/train.html
+++ b/Train at home/train.html
@@ -5,7 +5,112 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Train</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&display=swap"
+      rel="stylesheet"
+    />
     <link rel="stylesheet" href="train.css" />
   </head>
-  <body></body>
+  <body>
+    <header>
+      <h1>Workout At Home</h1>
+      <h2>How to exercise at home?</h2>
+    </header>
+
+    <nav>
+      <a href="#article5">30 Moves</a> | <a href="#article4">Best Workouts</a> |
+      <a href="#article3">Virtual Workouts</a> |
+      <a href="#">Another Article</a>
+    </nav>
+
+    <main>
+      <article id="article5">
+        <h3>4/15/20</h3>
+        <h2>30 Moves to Make the Most of Your At-Home Workout</h2>
+        <img src="athomeworkouts.png" alt="at home workouts" />
+        <p>
+          At-home fitness is more important now than ever. With more people
+          working from home and practicing social distancing, keeping fit and
+          staying active requires a unique approach — and one that's not as easy
+          as just frequenting a local gym or fitness studio (of which are now
+          closed). But while it's important to stay healthy right now, we
+          understand that paying for a fitness service may seem non-essential to
+          your monthly budget. Doling out monthly dues for a multi-level gym
+          with free weights, treadmills, and access to personal trainers is one
+          thing but ponying up the money for access to a streaming video in your
+          living room may not seem as viable an option.
+        </p>
+        <p class="continue">
+          <a
+            href="https://www.healthline.com/health/fitness-exercise/at-home-workouts#takeaway"
+            target="_blank"
+            >Read more...</a
+          >
+        </p>
+      </article>
+
+      <article id="article4">
+        <h3>3/26/20</h3>
+        <h2>Gym closed? Here are some of the best home workout options</h2>
+        <img src="gymsclosed.png" alt="gyms closed" />
+        <p>
+          There are really only two ways I'm coming out of this self-quarantine:
+          super-ripped or in dire need of a diet. As the coronavirus outbreak
+          leaves millions of people hunkered down at home and state-wide
+          lockdown orders close all nonessential businesses, many of us are left
+          without access to our usual gyms, workout studios and even parks.
+          Switching to a home workout routine isn't easy -- it takes some space
+          and a lot of intrinsic motivation -- but in light of the COVID-19
+          outbreak, many fitness experts, gyms, apps and studios are doing their
+          part to help us stay in shape. And establishing a workout routine
+          could, most importantly, ease anxiety related to coping with the
+          pandemic.
+        </p>
+        <p class="continue">
+          <a
+            href="https://www.cnet.com/how-to/gym-closed-here-are-some-of-the-best-home-workout-options/"
+            target="_blank"
+            >Read more...</a
+          >
+        </p>
+      </article>
+
+      <article id="article3">
+        <h3>3/31/20</h3>
+        <h2>The best free virtual workouts</h2>
+        <img src="virtualworkouts.png" alt="virtual workouts" />
+        <p>
+          At-home fitness is more important now than ever. With more people
+          working from home and practicing social distancing, keeping fit and
+          staying active requires a unique approach — and one that's not as easy
+          as just frequenting a local gym or fitness studio (of which are now
+          closed). But while it's important to stay healthy right now, we
+          understand that paying for a fitness service may seem non-essential to
+          your monthly budget. Doling out monthly dues for a multi-level gym
+          with free weights, treadmills, and access to personal trainers is one
+          thing but ponying up the money for access to a streaming video in your
+          living room may not seem as viable an option.
+        </p>
+        <p class="continue">
+          <a
+            href="https://www.businessinsider.com/best-free-virtual-workouts"
+            target="_blank"
+            >Read more...</a
+          >
+        </p>
+      </article>
+    </main>
+
+    <nav>
+      <a href="#exercises">Exercises</a> |
+      <a href="#techniques">Techniques</a> |
+      <a href="#foodadvice">Food Advice</a> |
+      <a href="#community">Community</a> |
+      <a href="#support">Support</a>
+    </nav>
+
+    <footer>&copy;2020 Workout At Home, Inc</footer>
+  </body>
 </html>
